yaml/ingress/k8s-1.22/Path-based-Routing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /blue
        backend:
          service:
            name: nginx-blue-svc
            port:
              number: 80
      - pathType: Prefix
        path: /green
        backend:
          service:
            name: nginx-green-svc
            port:
              number: 80
